# Saga

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
docs/: design-guide.html  design.md
docs/brand/: azulejo-brief.md
examples/memory/: sample.md
examples/workspace/playbooks/: publicar-release.md
examples/workspace/skills/resumir-pagina/: SKILL.md
examples/workspace/workflows/: resumir-url.md
sidecar/: index.js  package.json
src/: api.ts  caravel-loader.ts  i18n.ts  main.ts  style.css  zoom.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: accounting.rs  agent.rs  clarify.rs  claude_cli_models.rs  commands.rs  deep_research.rs  extract.rs  lib.rs  lmstudio.rs  memory.rs  ollama_registry.rs  orchestrator.rs  planner.rs  reasoning.rs  router.rs  scheduler.rs  settings.rs  store.rs  think.rs  web_agent.rs  which.rs  workspace.rs
src-tauri/src/mcp/: client.rs  mod.rs
src-tauri/src/providers/: claude_api.rs  claude_cli.rs  mod.rs  ollama.rs  openai_compat.rs
src-tauri/src/tools/: browser.rs  dispatch.rs  mod.rs  project.rs  web.rs
