[package]
name = "saga"
version = "0.1.0"
description = "Saga — assistente desktop com router local (Ollama) ↔ Claude para poupar tokens"
authors = ["Gabriel Teixeira <gabrielcalaca@hotmail.com>"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util", "sync"] }
futures-util = "0.3"
anyhow = "1"
dirs = "5"
rusqlite = { version = "0.32", features = ["bundled"] }

# Keychain do SO para guardar segredos (API key) — backend nativo por plataforma.
[target.'cfg(windows)'.dependencies]
keyring = { version = "3", features = ["windows-native"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["sync-secret-service"] }
