[package]
name = "saga"
version = "0.9.2"
description = "Saga — assistente desktop local-first (Ollama) com escalonamento opcional para o Claude"
authors = ["Gabriel Teixeira <gabrielcalaca@hotmail.com>"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
cron = "0.12"
chrono = "0.4"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util", "sync"] }
futures-util = "0.3"
anyhow = "1"
dirs = "5"
rusqlite = { version = "0.32", features = ["bundled"] }
scraper = "0.20"
urlencoding = "2"
sysinfo = "0.32"
base64 = "0.22"
pdf-extract = "0.7"
calamine = "0.26"
zip = "2"
portable-pty = "0.9.0"
notify = "8.2.0"

# Keychain do SO para guardar segredos (API key) — backend nativo por plataforma.
[target.'cfg(windows)'.dependencies]
keyring = { version = "3", features = ["windows-native"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["sync-secret-service"] }
